@@ -15,6 +15,8 @@ dependencies {
     implementation 'io.projectreactor:reactor-core:3.4.6'
     implementation(libs.guava)
     implementation("com.alipay.sofa:jraft-core:1.3.12")
+    implementation 'org.openjdk.jol:jol-core:0.17'
+
 
     testImplementation("org.mockito:mockito-core:4.6.1")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
@@ -25,7 +27,10 @@ test {
     useJUnitPlatform()
 
     jvmArgs(
-            "--add-opens=java.base/java.lang=ALL-UNNAMED"
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+
+            "-XX:+UseBiasedLocking",
+            "-XX:BiasedLockingStartupDelay=0"
 //            "-verbose:gc",
 //            "-Xms20M",
 //            "-Xmx20M",
